k8s/oss/routes/mcp-servers.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-dice-roller
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      sectionName: http
  hostnames:
    - agentgateway.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp-dice-roller
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: mcp-dice-roller
          group: agentgateway.dev
          kind: AgentgatewayBackend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-destinations
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      sectionName: http
  hostnames:
    - agentgateway.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp-destinations
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: mcp-destinations
          group: agentgateway.dev
          kind: AgentgatewayBackend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-flights
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      sectionName: http
  hostnames:
    - agentgateway.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp-flights
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: mcp-flights
          group: agentgateway.dev
          kind: AgentgatewayBackend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-book-flights
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      sectionName: http
  hostnames:
    - agentgateway.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp-book-flights
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: mcp-book-flights
          group: agentgateway.dev
          kind: AgentgatewayBackend
