k8s/oss/routes/rest-apis.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rest-flights
  namespace: rest-flights
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: http
  hostnames:
    - traefik-api-gw.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flights
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: rest-flights
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rest-book-flights
  namespace: rest-book-flights
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: http
  hostnames:
    - traefik-api-gw.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /book-flights
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: rest-book-flights
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rest-destinations
  namespace: rest-destinations
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: http
  hostnames:
    - traefik-api-gw.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /destinations
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: rest-destinations
          port: 8000
